src/test/testData/docker/DS028/Dockerfile.denied
ARG cmd = rm -rf /
FROM ubuntu:21
<error descr="Using ARG variables in RUN commands can be overridden by users, leading to unintended behaviors or security risks.">RUN $cmd</error>